--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -32,7 +32,7 @@
             <td><a href="{{ path('app_cart_empty') }}" class="btn btn-danger">Vider le panier</a></td>
             <td colspan="2">Cout total :</td>
             <td colspan="">{{ total }}</td>
-            <td><a href="" class="btn btn-success">Valider panier</a></td>
+            <td><a href="{{ path('app_selection') }}" class="btn btn-success">Valider panier</a></td>
         </tr>
         </tbody>
     </table>
